--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,8 @@
 		  {full , [{basic}, netlink, {amqp}, {collectd}]}]}.
 {deps,
  [
-  {exometer_core, ".*", {git, "git://github.com/Feuerlabs/exometer_core.git",
-			 {tag, "1.2"}}},
+  {exometer_core, ".*", {git, "git://github.com/esl/exometer_core.git",
+			 {branch, "1.4-patched"}}},
   {exometer_collectd, ".*", {git, "git://github.com/Feuerlabs/exometer_collectd.git",
 			     {tag, "1.0.1"}}},
   {netlink, ".*", {git, "git://github.com/Feuerlabs/netlink.git", {tag,"1.0"}}},
